@@ -14,6 +14,7 @@
 
 namespace Castle.MicroKernel.Proxy
 {
+	using System;
 	using System.Runtime.Remoting;
 	using Castle.Core;
 	using Castle.Core.Interceptor;
@@ -55,6 +56,31 @@ namespace Castle.MicroKernel.Proxy
 			}
 
 			return instance;
+		}
+
+		public static Type GetUnproxiedType(object instance)
+		{
+			if (!RemotingServices.IsTransparentProxy(instance))
+			{
+				IProxyTargetAccessor accessor = instance as IProxyTargetAccessor;
+
+				if (accessor != null)
+				{
+					object target = accessor.DynProxyGetTarget();
+
+					if (target != null)
+					{
+						if (ReferenceEquals(target, instance))
+						{
+							return instance.GetType().BaseType;
+						}
+
+						instance = target;
+					}
+				}
+			}
+
+			return instance.GetType();
 		}
 	}
 }
